fixed simple glitch with contact on mobile

--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ html{
   width: 100%;
   margin-left: .2em;
   content: "";
-  animation: revealContact 2s 4s steps(12) forwards;
+  animation: revealContact 2.5s 4s steps(12) forwards;
 }
 .h2Contact::after{
   content: "▯ ";
